Added OSS links.

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,9 @@
 
 <h1>About the TSA Timeline Website</h1>
 
-<p>The TSA Timeline website is powered by the <a href="http://www.web-core.org/">WebCore</a> web application development framework, <a href="http://www.python.org/">Python</a>, a high-level general purpose scripting language, and <a href="http://www.mongodb.org/">MongoDB</a> object database.</p>
+<p>The TSA Timeline website is an open source application powered by the <a href="http://www.web-core.org/">WebCore</a> web application development framework, <a href="http://www.python.org/">Python</a>, a high-level general purpose scripting language, and <a href="http://www.mongodb.org/">MongoDB</a> object database.</p>
+
+<p>Community-driven <a href="https://github.com/GothAlice/TSA-Timeline/">source code</a> for this project is available and contributions are welcome. Project hosting is provided by <a href="https://github.com/">GitHub</a>.</p>
 
 <p>Portions of the code are copyright their respective authors and distributed under various licenses.  For more information, please see the specific project websites and respective dependant packages.</p>
 
