--- a/templates/master.html
+++ b/templates/master.html
@@ -47,7 +47,7 @@
             <div class="container">
                 <menu>
                     <li class="nav-default"><a href="/">Home<br><label> </label></a></li
-                    ><li class="nav-feeds"><a href="/feeds">Feeds<br><label>Source feeds.</label></a></li>
+                    ><li class="nav-feeds"><a href="/feeds">Feeds<br><label>Source feeds.</label></a></li
                     ><li class="nav-stats"><a href="/stats">Stats<br><label>Site statistics.</label></a></li>
                     <!--  
                                         ><li class="nav-download"><a href="/download">Download<br><label>Downloading and Installing</label></a></li
