--- a/public/css/master.css
+++ b/public/css/master.css
@@ -154,8 +154,8 @@ form.contact textarea { height: 100px; }
 #breadcrumb li.current { padding: 2px 0; }
 #breadcrumb li.current:before { content: '▸ '; margin-right: 5px; }
 
-menu.tabs, h1.primary { list-style: none; position: relative; margin: -10px -10px 5px; padding: 10px 10px 0; text-align: right; background: #8b8b8b; filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#a9a9a9', endColorstr='#7a7a7a');  background: -webkit-gradient(linear, left top, left bottom, from(#a9a9a9), to(#7a7a7a));  background: -moz-linear-gradient(top,  #a9a9a9,  #7a7a7a); }
-.indent h1:first-child { list-style: none; position: relative; margin: 0 -10px 5px; padding: 10px 10px 0; text-align: right; background: #8b8b8b; filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#a9a9a9', endColorstr='#7a7a7a');  background: -webkit-gradient(linear, left top, left bottom, from(#a9a9a9), to(#7a7a7a));  background: -moz-linear-gradient(top,  #a9a9a9,  #7a7a7a); }
+menu.tabs, h1.primary { list-style: none; position: relative; margin: 0 -10px 0; padding: 10px 10px 0; text-align: right; background: #8b8b8b; filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#a9a9a9', endColorstr='#7a7a7a');  background: -webkit-gradient(linear, left top, left bottom, from(#a9a9a9), to(#7a7a7a));  background: -moz-linear-gradient(top,  #a9a9a9,  #7a7a7a); }
+.indent h1:first-child { list-style: none; position: relative; margin: 0 -10px 0; padding: 10px 10px 0; text-align: right; background: #8b8b8b; filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#a9a9a9', endColorstr='#7a7a7a');  background: -webkit-gradient(linear, left top, left bottom, from(#a9a9a9), to(#7a7a7a));  background: -moz-linear-gradient(top,  #a9a9a9,  #7a7a7a); }
 
 h1.primary, .indent h1:first-child { color: white; text-align: left; padding: 8px 10px; }
 
@@ -240,7 +240,7 @@ menu.inline, ul.inline, ol.inline { margin: 0; padding: 0; display: inline-block
 form .buttons { margin-top: 5px; }
 form .buttons.top { margin-bottom: 10px; margin-top: 0; }
 .buttons.assetmenu { position: relative; z-index: 10000; background: #8b8b8b; filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#7a7a7a', endColorstr='#a9a9a9'); background: -webkit-gradient(linear, left top, left bottom, from(#7a7a7a), to(#a9a9a9)); background: -moz-linear-gradient(top,  #7a7a7a,  #a9a9a9); -webkit-box-shadow: 0px 0px 4px black; -moz-box-shadow: 0px 0px 4px black; border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0; border-width: 0; }
-.buttons.footer { position: relative; margin: 5px -10px -15px; -webkit-box-shadow: 0 0 0 white; -moz-box-shadow: 0 0 0 white; border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0; border-width: 0; }
+.buttons.footer, .buttons.header { position: relative; margin: 0 -10px 0; -webkit-box-shadow: 0 0 0 white; -moz-box-shadow: 0 0 0 white; border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0; border-width: 0; }
 .buttons li { margin: 0 4px 0 0; padding: 0 0 4px; float: left; position: relative; list-style: none; }
 .buttons li.nested > a:after { content: ' ▾'; margin-right: -3px; }
 .buttons .fr > li { margin: 0 0 0 4px; }
@@ -286,9 +286,15 @@ html[xmlns] .buttons { display: block; }
 
 
 
-
-.indent .buttons:first-child { margin-top: 0; margin-bottom: 5px; }
+.indent .buttons.header { margin-top: 0; margin-bottom: -10px; }
+.buttons.footer { margin-top: 10px; margin-bottom: -15px; }
 .buttons h1 { position: absolute !important; top: 3px; left: 10px; margin: 0; padding: 0; background: transparent !important; }
+h1.primary { margin: 10px -10px 0; }
+h1.primary a { color: white; }
+h1.primary a:hover {  }
+div.byline.tl { background: #fff; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff', endColorstr='#d0d0d0'); background: -webkit-gradient(linear, left center, left bottom, from(#fff), to(#d0d0d0)); background: -moz-linear-gradient(top, #fff, #d0d0d0); padding-bottom: 10px; margin-top: 0; border-top-width: 0; border-bottom: 1px solid #CCC; }
+
+
 
 dl.tsa, dl.tsa dt, dl.tsa dd { margin: 0; padding: 0; }
 dl.tsa dd.desc * { margin: 0; padding: 0 }
