--- a/public/css/master.css
+++ b/public/css/master.css
@@ -315,4 +315,4 @@ dl.tsa dd.desc ul { padding-left: 3em; margin-bottom: 10px; }
 img[width=1] { display: none; }
 .feedflare { display: none; }
 .j>font>br { display: none; }
-.j>font>div+br { display: none; }
+.j>font>br+div { display: none; }
