Lots-o updates, including many new feeds.

--- a/templates/master.html
+++ b/templates/master.html
@@ -83,6 +83,7 @@
             <div class="container">
                 <menu>
                     <li class="nav-default"><a href="/">Home<br><label> </label></a></li
+                    ><li class="nav-twitter"><a href="/twitter">Twitter<br><label>Live Twitter stream.</label></a></li
                     ><li class="nav-feeds"><a href="/feeds">Feeds<br><label>Source feeds.</label></a></li
                     ><li class="nav-stats"><a href="/stats">Stats<br><label>Site statistics.</label></a></li>
                     <!--  
